# kinex

./: .gitignore  =0.12.  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  requirements.in  requirements.txt
docs/chapters/: installation.rst  usage.rst
docs/chapters/features/: comparison.rst  enrichment.rst  scoring.rst  usage.rst
docs/figures/: comparison_input.html  comparison_multiple_drugs.html  fig.html  kinase_inference.html
src/: __init__.py  comparison.py  enrichment.py  functions.py  input.py  input_check.py  kinex.py  pssm.py  score.py  scoring.py  table2x2.py
src/data/: __init__.py  groups.json
src/kinex/: comparison.py  enrichment.py  functions.py  kinex.py  score.py  sequence.py  table2x2.py
src/kinex/resources/: __init__.py  config.json  pssm_table_ser_thr.csv  pssm_table_tyr.csv  ser_thr_family.json  ser_thr_family_colors.json  tyr_family.json  tyr_family_colors.json
test/: test_io.py  test_kinex.py
test/data/: test_input_sites.csv  test_pssm_table.csv  test_scoring_matrix.csv
tests/: test_enrichment.py  test_io.py  test_kinex.py  test_score.py  test_sequence.py  test_table2x2.py
tests/data/: __init__.py  test_input_sites.csv  test_pssm_table.csv  test_scoring_matrix.csv
