[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinex"
version = "1.1.0"
description = "A python package to compute kinase scoring and enrichment"
authors = [
    { name = "Alexandra Valeanu", email = "valeanualexandra17@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "scipy >= 1.10.0",
    "numpy >= 1.19.5",
    "nbformat >= 4.2.0",
    "pandas",
    "statsmodels",
    "plotly",
    "scikit-learn",
    "umap-learn",
    "importlib-resources",
    "tomli",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "furo"
]

[project.urls]
scoring_matrix_ser_thr = "https://zenodo.org/records/13964893/files/scoring_matrix_ser_thr_82k_sorted.csv.gz?download=1"
scoring_matrix_tyr = "https://zenodo.org/records/13964893/files/scoring_matrix_tyr_7k_sorted.csv.gz?download=1"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kinex = ["resources/*.csv", "resources/*.json"]
